[gd_scene load_steps=5 format=2]

[ext_resource path="res://Prefabs/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Scenes/Gameover.gd" type="Script" id=2]
[ext_resource path="res://Audio/Die.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/UI/Game_over.png" type="Texture" id=4]

[node name="Scene" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 90.0 ],
"_edit_vertical_guides_": [ 160.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 184.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="Gameover" type="Sprite" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160, 90 )
texture = ExtResource( 4 )

[node name="SoundDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -16.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
